sosyal medya girişleri ayarlandı

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -17,8 +17,8 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-default">
                             <li>
-                                <a ui-sref="home.login">
-                                    <i class="fa fa-sign-in right" ng-click="open"></i>Giriş Yap
+                                <a ng-click="open()">
+                                    <i class="fa fa-sign-in right"></i>Giriş Yap
                                 </a>
                             </li>
                             <li>
@@ -47,8 +47,8 @@
                         </li>
 
                         <li style="float:left;" class="hidden-xs">
-                            <a ui-sref="home.login">
-                                <i class="fa fa-sign-in right" ng-click="open"></i>Giriş Yap
+                            <a ng-click="open()">
+                                <i class="fa fa-sign-in right" ></i>Giriş Yap
                             </a>
                         </li>
                         <li style="float:left" class="hidden-xs">
