--- a/views/main.html
+++ b/views/main.html
@@ -4,7 +4,7 @@
         <div class="page-content-wrapper">
             <div class="page-content">
                 <div class="container">
-                    <slider></slider>
+                    <div ui-view></div>
 
                 </div>
             </div>
