--- a/views/partials/logintemplate.html
+++ b/views/partials/logintemplate.html
@@ -10,13 +10,18 @@
             <div class="form-group">
                 <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
                 <label class="control-label visible-ie8 visible-ie9">Username</label>
-                <input class="form-control form-control-solid placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="username" />
+                <div class="input-group">
+                    <span class="input-group-addon">
+                        <i class="fa fa-user"></i>
+                    </span>
+                    <input class="form-control form-control-solid placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="username" />
+                </div>
             </div>            
             <div class="form-group">
                 <label class="control-label visible-ie8 visible-ie9">Password</label>
                 <div class="input-group">
                     <span class="input-group-addon">
-                        <i class="fa fa-envelope"></i>
+                        <i class="fa fa-lock"></i>
                     </span>
                     <input class="form-control form-control-solid placeholder-no-fix" type="password" autocomplete="off" placeholder="Password" name="password" />
                 </div>
@@ -32,17 +37,14 @@
                 <h4>Or login with</h4>
                 <ul class="social-icons">
                     <li>
-                        <a class="social-icon-color facebook" data-original-title="facebook" href="javascript:;"></a>
+                        <a class="social-icon-color facebook" data-original-title="facebook" ng-click="login('facebook')"></a>
                     </li>
                     <li>
-                        <a class="social-icon-color twitter" data-original-title="Twitter" href="javascript:;"></a>
+                        <a class="social-icon-color twitter" data-original-title="Twitter"  ng-click="login('twitter')"></a>
                     </li>
                     <li>
-                        <a class="social-icon-color googleplus" data-original-title="Goole Plus" href="javascript:;"></a>
-                    </li>
-                    <li>
-                        <a class="social-icon-color linkedin" data-original-title="Linkedin" href="javascript:;"></a>
-                    </li>
+                        <a class="social-icon-color googleplus" data-original-title="Goole Plus"ng-click="login('google')"></a>
+                    </li>                
                 </ul>
             </div>
             <div class="create-account">
