--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -46,13 +46,54 @@
                            
                         </li>
 
-                        <li style="float:left;" class="hidden-xs">
+                        <li style="float:left;" class="hidden-xs" ng-show="isLogged!==true">
                             <a ng-click="open()">
                                 <i class="fa fa-sign-in right" ></i>Giriş Yap
                             </a>
                         </li>
-                        <li style="float:left" class="hidden-xs">
+                        <li style="float:left" class="hidden-xs"ng-show="isLogged!==true">
                             <a ui-sref="home.map"><i class="fa fa-registered"></i>Kayıt Ol</a>
+                        </li>
+                        <li  class="dropdown dropdown-user dropdown-dark"   ng-show="isLogged===true">
+                            <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+                                <img alt="" class="img-circle" ng-src="{{profileImg}}">
+                                <span class="username username-hide-mobile">{{nick}}</span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-default">
+                                <li>
+                                    <a href="page_user_profile_1.html">
+                                        <i class="icon-user"></i> My Profile
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="app_calendar.html">
+                                        <i class="icon-calendar"></i> My Calendar
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="app_inbox.html">
+                                        <i class="icon-envelope-open"></i> My Inbox
+                                        <span class="badge badge-danger"> 3 </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="app_todo_2.html">
+                                        <i class="icon-rocket"></i> My Tasks
+                                        <span class="badge badge-success"> 7 </span>
+                                    </a>
+                                </li>
+                                <li class="divider"> </li>
+                                <li>
+                                    <a href="page_user_lock_1.html">
+                                        <i class="icon-lock"></i> Lock Screen
+                                    </a>
+                                </li>
+                                <li>
+                                    <a ng-click="logout()">
+                                        <i class="icon-key"></i> Log Out
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
