--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -16,16 +16,22 @@
                             <i class="fa fa-2x fa-sign-in right"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-default">
-                            <li>
+                            <li ng-show="isLogged!==true">
                                 <a ng-click="open()">
                                     <i class="fa fa-sign-in right"></i>Giriş Yap
                                 </a>
                             </li>
-                            <li>
+                            <li ng-show="isLogged!==true">
                                 <a ui-sref="home.map"><i class="fa fa-registered"></i>Kayıt Ol</a>
+                            </li>
+                            <li ng-show="isLogged===true">                     
+                                <a ng-click="logout()">
+                                    <i class="icon-key"></i> Log Out
+                                </a>
                             </li>
                         </ul>
                     </li>
+
                 </ul>
                 <div class="top-menu">
                     <ul class="nav navbar-nav pull-right-md">
@@ -33,7 +39,7 @@
                             <div class="input-group">
                                 <input type="text" id="typeahead_example_1" name="typeahead_example_1" class="form-control" placeholder="Turistik Mekan, cafe,doğal güzellik ara" />
                                 <a href="#" class="dropdown-toggle input-group-addon right" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <i class="fa fa-cog" ng-click="open"></i>                                   
+                                    <i class="fa fa-cog" ng-click="open"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-list">
                                     <li style="padding: 10px;">
@@ -43,51 +49,23 @@
                                     </li>
                                 </ul>
                             </div>
-                           
+
                         </li>
 
                         <li style="float:left;" class="hidden-xs" ng-show="isLogged!==true">
                             <a ng-click="open()">
-                                <i class="fa fa-sign-in right" ></i>Giriş Yap
+                                <i class="fa fa-sign-in right"></i>Giriş Yap
                             </a>
                         </li>
-                        <li style="float:left" class="hidden-xs"ng-show="isLogged!==true">
+                        <li style="float:left" class="hidden-xs" ng-show="isLogged!==true">
                             <a ui-sref="home.map"><i class="fa fa-registered"></i>Kayıt Ol</a>
                         </li>
-                        <li  class="dropdown dropdown-user dropdown-dark"   ng-show="isLogged===true">
+                        <li class="dropdown dropdown-user dropdown-dark" ng-show="isLogged===true">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                 <img alt="" class="img-circle" ng-src="{{profileImg}}">
                                 <span class="username username-hide-mobile">{{nick}}</span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-default">
-                                <li>
-                                    <a href="page_user_profile_1.html">
-                                        <i class="icon-user"></i> My Profile
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="app_calendar.html">
-                                        <i class="icon-calendar"></i> My Calendar
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="app_inbox.html">
-                                        <i class="icon-envelope-open"></i> My Inbox
-                                        <span class="badge badge-danger"> 3 </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="app_todo_2.html">
-                                        <i class="icon-rocket"></i> My Tasks
-                                        <span class="badge badge-success"> 7 </span>
-                                    </a>
-                                </li>
-                                <li class="divider"> </li>
-                                <li>
-                                    <a href="page_user_lock_1.html">
-                                        <i class="icon-lock"></i> Lock Screen
-                                    </a>
-                                </li>
                                 <li>
                                     <a ng-click="logout()">
                                         <i class="icon-key"></i> Log Out
