--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -17,7 +17,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-default">
                             <li ng-show="isLogged!==true">
-                                <a ng-click="open()">
+                                <a ui-sref="home.login">
                                     <i class="fa fa-sign-in right"></i>Giriş Yap
                                 </a>
                             </li>
@@ -53,14 +53,14 @@
                         </li>
 
                         <li style="float:left;" class="hidden-xs" ng-show="isLogged!==true">
-                            <a ng-click="open()">
+                            <a ui-sref="home.login">
                                 <i class="fa fa-sign-in right"></i>Giriş Yap
                             </a>
                         </li>
                         <li style="float:left" class="hidden-xs" ng-show="isLogged!==true">
                             <a ui-sref="home.map"><i class="fa fa-registered"></i>Kayıt Ol</a>
                         </li>
-                        <li class="dropdown dropdown-user dropdown-dark" ng-show="isLogged===true">
+                        <li class="dropdown dropdown-user dropdown-dark" ng-show="isLogged===true" class="hidden-xs">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                 <img alt="" class="img-circle" ng-src="{{profileImg}}">
                                 <span class="username username-hide-mobile">{{nick}}</span>
