--- a/views/partials/slider.html
+++ b/views/partials/slider.html
@@ -1,25 +1,15 @@
-﻿<div class="portlet light">
-    <div class="portlet-title">
-  
-    </div>
-    <div class="portlet-body">
-        <div class="row">
-            <div class="col-md-6">
-                <div ng-controller="CarouselDemoCtrl">
-                    <div style="height: 305px">
-                        <carousel interval="myInterval">
-                            <slide ng-repeat="slide in slides" active="slide.active">
-                                <img ng-src="{{slide.image}}" style="margin:auto;height:305px">
-                                <div class="carousel-caption">
-                                    <p>{{slide.text}}</p>
-                                </div>
-                            </slide>
-                        </carousel>
-                    </div>
+﻿
+<div ng-controller="CarouselDemoCtrl">
+    <div >
+        <carousel interval="myInterval">
+            <slide ng-repeat="slide in slides" active="slide.active">
+                <img ng-src="{{slide.image}}" style="margin:auto;height:305px; width:100%">
+                <div class="carousel-caption">
+                    <p>{{slide.text}}</p>
                 </div>
-            </div>
-
-        </div>
+            </slide>
+        </carousel>
     </div>
 </div>
+
 
