--- a/views/partials/register.html
+++ b/views/partials/register.html
@@ -1,5 +1,12 @@
-﻿     <form class="register-form" action="index.html" method="post">
-            <h3 class="font-green">Sign Up</h3>           
+﻿
+<div class="row">
+    <div class="col-md-6 col-lg-4 col-lg-8 hidden-xs">
+        <!--<img src="../../assets/global/img/acarlar.jpg" class="img-responsive" />-->
+        <slider></slider>
+    </div>
+    <div class="col-md-6 col-xs-12 col-lg-4 ">
+        <form class="register-form" action="index.html" method="post">
+            <h3 class="font-green">Sign Up</h3>
             <p class="hint"> Enter your account details below: </p>
             <div class="form-group">
                 <label class="control-label visible-ie8 visible-ie9">Username</label>
@@ -22,7 +29,9 @@
                 <div id="register_tnc_error"> </div>
             </div>
             <div class="form-actions">
-                <button type="button" id="register-back-btn" class="btn btn-default">Back</button>
                 <button type="submit" id="register-submit-btn" class="btn btn-success uppercase pull-right">Submit</button>
             </div>
         </form>
+    </div>
+
+</div>
