sosyal medya giriş ayarları

--- a/views/partials/register.html
+++ b/views/partials/register.html
@@ -9,8 +9,12 @@
             <h3 class="font-green">Sign Up</h3>
             <p class="hint"> Enter your account details below: </p>
             <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Username</label>
-                <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="username" />
+                <label class="control-label visible-ie8 visible-ie9">Email Adress</label>
+                <input class="form-control placeholder-no-fix" type="email" autocomplete="off" id="register_email" placeholder="Email Adress" name="password" />
+            </div>
+            <div class="form-group">
+                <label class="control-label visible-ie8 visible-ie9">Name</label>
+                <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Name" name="username" />
             </div>
             <div class="form-group">
                 <label class="control-label visible-ie8 visible-ie9">Password</label>
