sosyal medya giriş ayarları

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -15,8 +15,8 @@
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                             <i class="fa fa-2x fa-sign-in right"></i>
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-default">
-                            <li ng-show="isLogged!==true">
+                        <ul class="dropdown-menu dropdown-menu-list">
+                            <li ng-show="isLogged!==true" class="dropdown-dark">
                                 <a ui-sref="home.login">
                                     <i class="fa fa-sign-in right"></i>Giriş Yap
                                 </a>
