--- a/views/main.html
+++ b/views/main.html
@@ -4,8 +4,8 @@
         <div class="page-content-wrapper">
             <div class="page-content">
                 <div class="container">
-                    <div ui-view></div>
-
+                    <!--<div ui-view></div>-->
+            
                 </div>
             </div>
 
