--- a/assets/global/plugins/angular-ui-select/select.css
+++ b/assets/global/plugins/angular-ui-select/select.css
@@ -235,7 +235,7 @@ body > .ui-select-bootstrap.open {
     color: #fff;
     text-decoration: none;
     outline: 0;
-    background-color: #428bca;
+    background-color: #3598dc;
 }
 
 .ui-select-bootstrap .ui-select-choices-row.disabled>a,
