--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -2,63 +2,26 @@
     <div class="page-header-top">
         <div class="container">
             <div class="row">
-                <ul class="nav navbar-nav">
-                    <li style="float:left">
-                        <a href="javascript:;" class="menu-toggler"></a>
-                    </li>
+                <ul class="nav navbar-nav">                   
                     <li style="max-width:500px; padding: 16px;float:left">
                         <a ui-sref="home">
                             <img src="../assets/layouts/layout3/img/logo-default.jpg" alt="logo" class="logo-default">
                         </a>
+                    </li>                 
+                    <li style="padding-right:10px" class="pull-right">
+                        <a href="javascript:;" class="menu-toggler"></a>
                     </li>
-                    <li class="dropdown dropdown-user dropdown-dark visible-xs" style="float:left;padding-top: 16px;">
-                        <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                            <i class="fa fa-2x fa-sign-in right"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-list">
-                            <li ng-show="isLogged!==true" class="dropdown-dark">
-                                <a ui-sref="home.login">
-                                    <i class="fa fa-sign-in right"></i>Giriş Yap
-                                </a>
-                            </li>
-                            <li ng-show="isLogged!==true">
-                                <a ui-sref="home.register"><i class="fa fa-registered"></i>Kayıt Ol</a>
-                            </li>
-                            <li ng-show="isLogged===true">                     
-                                <a ng-click="logout()">
-                                    <i class="icon-key"></i> Log Out
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
                 </ul>
                 <div class="top-menu">
-                    <ul class="nav navbar-nav pull-right-md">
-                        <li style="max-width:500px; padding: 10px;">
-                            <div class="input-group">
-                                <input type="text" id="typeahead_example_1" name="typeahead_example_1" class="form-control" placeholder="Turistik Mekan, cafe,doğal güzellik ara" />
-                                <a href="#" class="dropdown-toggle input-group-addon right" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <i class="fa fa-cog" ng-click="open"></i>
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-list">
-                                    <li style="padding: 10px;">
-                                        <a ui-sref="home.login" class="green-dark black-white bold">
-                                            <i class="fa fa-search left"></i>Gelişmiş Arama
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-
-                        </li>
+                    <ul class="nav navbar-nav pull-right-md">                       
 
                         <li style="float:left;" class="hidden-xs" ng-show="isLogged!==true">
-                            <a ui-sref="home.login">
+                            <a ui-sref="home.login" ui-sref-opts="{reload: true}">
                                 <i class="fa fa-sign-in right"></i>Giriş Yap
                             </a>
                         </li>
                         <li style="float:left" class="hidden-xs" ng-show="isLogged!==true">
-                            <a ui-sref="home.register"><i class="fa fa-registered"></i>Kayıt Ol</a>
+                            <a ui-sref="home.register" ui-sref-opts="{reload: true}"><i class="fa fa-registered"></i>Kayıt Ol</a>
                         </li>
                         <li class="dropdown dropdown-user dropdown-dark" ng-show="isLogged===true" class="hidden-xs">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
