--- a/views/partials/register.html
+++ b/views/partials/register.html
@@ -1,41 +1,75 @@
 ﻿
 <div class="row">
-    <div class="col-md-6 col-lg-4 col-lg-8 hidden-xs">
-        <!--<img src="../../assets/global/img/acarlar.jpg" class="img-responsive" />-->
-        <slider></slider>
-    </div>
-    <div class="col-md-6 col-xs-12 col-lg-4 ">
-        <form class="register-form" action="index.html" method="post">
-            <h3 class="font-green">Sign Up</h3>
+    <div class="col-md-6 col-xs-12 col-lg-4 col-md-offset-4 margin-top-40 ">
+        <form class="register-form" name="form" novalidate>
+            <h3 class=" font-green">
+                Sign Up
+            </h3>
             <p class="hint"> Enter your account details below: </p>
             <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Email Adress</label>
-                <input class="form-control placeholder-no-fix" type="email" autocomplete="off" id="register_email" placeholder="Email Adress" name="password" />
+                <label class="control-label visible-ie8 visible-ie9">Ad Soyad</label>
+                <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Name" name="username" ng-minlength="6"
+                       required ng-model="user.User_Name" />
+
+                <div ng-show="form.$submitted || form.username.$touched">
+                    <p ng-show="form.username.$error.required" class="alert alert-info">Ad-Soyad Alanını Doldurunuz</p>
+
+                    <p ng-show="form.username.$error.minlength" class="alert alert-danger">Ad-Soyad  Çok Kısa</p>
+                </div>
+
+
             </div>
             <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Name</label>
-                <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Name" name="username" />
+                <label class="control-label visible-ie8 visible-ie9">Email Adress</label>
+                <input class="form-control placeholder-no-fix" type="email" required autocomplete="off" id="register_email" placeholder="Email Adress" name="email" ng-model="user.User_Email" />
+
+                <div ng-show="form.$submitted || form.email.$touched">
+                    <p ng-show="form.email.$error.required" class="alert alert-info">E-mail Alanını doldurunuz.</p>
+
+                    <p ng-show="form.email.$error.email" class="alert alert-danger">Geçersiz Mail Adresi</p>
+                </div>
+
+
             </div>
+          
             <div class="form-group">
                 <label class="control-label visible-ie8 visible-ie9">Password</label>
-                <input class="form-control placeholder-no-fix" type="password" autocomplete="off" id="register_password" placeholder="Password" name="password" />
-            </div>
+                <input class="form-control placeholder-no-fix" required type="password" autocomplete="off" id="register_password" placeholder="Password" name="password" data-ng-model="user.User_Password" />
+                <div ng-show="form.$submitted || form.password.$touched">
+                    <p ng-show="form.password.$error.required" class="alert alert-info">Şifre Alanını Doldurunuz</p>
+
+                </div>
+             </div>
             <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Re-type Your Password</label>
-                <input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="Re-type Your Password" name="rpassword" />
-            </div>
+                <label class="control-label visible-ie8 visible-ie9">Tekrar Şifre :</label>
+                <input class="form-control placeholder-no-fix" required type="password" autocomplete="off" placeholder="Re-type Your Password" name="rpassword" ng-model="test" />
+                <p ng-show="test!=user.User_Password" class="alert alert-danger">Şifreler Biribiriyle uyuşmuyor</p>
+
+             </div>
             <div class="form-group margin-top-20 margin-bottom-20">
                 <label class="check">
-                    <input type="checkbox" name="tnc" /> I agree to the
+                    <input type="checkbox" name="tnc" required="" ng-model="master" /> Okudum ve kabul ediyorum
                     <a href="javascript:;"> Terms of Service </a> &
                     <a href="javascript:;"> Privacy Policy </a>
                 </label>
-                <div id="register_tnc_error"> </div>
+                <div ng-show="form.tnc.$touched" ng-checked="master">
+                    <p ng-show="!master" class="alert alert-info">Sözleşmeyi Kabul Ediniz.</p>
+                </div>
+
             </div>
             <div class="form-actions">
-                <button type="submit" id="register-submit-btn" class="btn btn-success uppercase pull-right">Submit</button>
+                <button type="submit" ng-disabled="form.$invalid"  id="register-submit-btn" class="btn btn-success uppercase pull-right" ng-click="register()">Submit</button>
             </div>
         </form>
     </div>
 
 </div>
+<!--<style type="text/css">
+    .register-form input.ng-invalid.ng-touched {
+        background-color: #FA787E;
+    }
+
+    .register-form.ng-valid.ng-touched {
+        background-color: #78FA89;
+    }
+</style>-->
