--- a/Web/views/main.html
+++ b/Web/views/main.html
@@ -1,11 +1,24 @@
 ﻿<div>
     <header></header>
+    <div class="clearfix"> </div>
+    <div class="page-head">
+        <div class="page-head">
+            <div class="container">
+                <!-- BEGIN PAGE TITLE -->
+                <div class="page-title">
+                  
+                </div>
+           
+            </div>
+        </div>
+    </div>
     <div class="page-container">
-        <div class="page-content-wrapper">
+        <div class="page-content-wrapper">          
             <div class="page-content">
                 <div class="container">
+
                     <div ui-view></div>
-                    <div class="row">
+                    <!--<div class="row">
                         <div class="col-md-6 col-xs-12 col-lg-4 col-md-offset-4 margin-top-40 ">
                             <div class="input-group">
                                 <ui-select ng-model="selected"
@@ -34,12 +47,12 @@
                                         </label>
                                         <label>
                                             <input type="checkbox" /> Mekan
-                                        </label>                                        
+                                        </label>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
