--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <ul class="nav navbar-nav">                   
                     <li style="max-width:500px; padding: 16px;float:left">
-                        <a ui-sref="home">
+                        <a ui-sref="home.locations">
                             <img src="../assets/layouts/layout3/img/logo-default.jpg" alt="logo" class="logo-default">
                         </a>
                     </li>                 
