--- a/Web/views/partials/slider.html
+++ b/Web/views/partials/slider.html
@@ -2,7 +2,7 @@
 <div ng-controller="CarouselDemoCtrl">
     <div >
         <carousel interval="myInterval">
-            <slide ng-repeat="slide in slides" active="slide.active">
+            <slide ng-repeat="slide in slides" active="slide.active" ng-non-bindable>
                 <img ng-src="{{slide.image}}" style="margin:auto;height:305px; width:100%">
                 <div class="carousel-caption">
                     <p>{{slide.text}}</p>
