google maps integration

--- a/Web/assets/layouts/layout3/css/custom.css
+++ b/Web/assets/layouts/layout3/css/custom.css
@@ -2,3 +2,17 @@
 .hor-menu a{
     color:darkblue;
 }
+.angular-google-map-container { height:300px; width:100%}
+img.adp-marker {
+margin-right:15px!important;
+}
+.adp, .adp table {
+width: 100%;
+}
+.adp-summary {
+    text-align: center;
+    color: #337ab7;
+    font-size: 22px;
+    margin: 10px;
+}
+
