--- a/Web/views/partials/locationFull.html
+++ b/Web/views/partials/locationFull.html
@@ -1,7 +1,7 @@
 ﻿<div class="blog-page blog-content-2">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-        
+
             <div class="blog-single-content bordered blog-container">
                 <div class="blog-single-head">
                     <h1 class="blog-single-head-title">{{location.Location_Name}}</h1>
@@ -45,7 +45,8 @@
                 </div>
                 <div class="blog-comments">
                     <h3 class="sbold blog-comments-title">Yorumlar({{location.UserComments.length}})</h3>
-                    <div class="c-comment-list">
+
+                    <br /><div class="c-comment-list" style="height:310px;  overflow: auto;">
                         <div class="media" ng-repeat="comment in location.UserComments">
                             <div class="media-left">
                                 <a href="#">
@@ -68,7 +69,7 @@
                             <textarea rows="8" name="message" ng-model="comment.Comment" placeholder="Yorumunuzu Yazınız ..." class="form-control c-square"></textarea>
                         </div>
                         <div class="form-group">
-                            <button type="button" class="btn blue uppercase btn-md sbold btn-block" ng-click="sendComment()">Submit</button>
+                            <button type="button" class="btn blue uppercase btn-md sbold btn-block" ng-click="sendComment()">Gönder</button>
                         </div>
                     </form>
                 </div>
@@ -77,6 +78,6 @@
 
     </div>
 
-   
+
 </div>
 
