--- a/Web/views/admin-partials/users.html
+++ b/Web/views/admin-partials/users.html
@@ -48,7 +48,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:;">
+                                <a ng-click="DeleteUser(user.User_ID)">
                                     <i class="fa fa-pencil"></i> Sil
                                 </a>
                             </li>
