--- a/Web/views/partials/locations.html
+++ b/Web/views/partials/locations.html
@@ -39,7 +39,7 @@
                             </div>
                             <div class="tile-title">
                                 <h3>
-                                    <a ui-sref="home.locationDetails({location:{{location}}})">{{location.Location_Name}}</a>
+                                    <a ui-sref="home.locationDetails({locationID:{{location.Location_ID}}}">{{location.Location_Name}}</a>
                                 </h3>
 
                                 <a ng-click="like(location)" ng-if="">
