--- a/Web/views/adminmain.html
+++ b/Web/views/adminmain.html
@@ -95,7 +95,7 @@
             <!-- DOC: Set data-keep-expand="true" to keep the submenues expanded -->
             <!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
             <ul class="page-sidebar-menu  page-header-fixed page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
-                <li class="nav-item start active open">
+                <li class="nav-item start ">
                     <a ui-sref="admin.locations" class="nav-link nav-toggle">
                         <i class="fa  fa-map-marker"></i>
                         <span class="title">Mekanlar</span>
@@ -104,7 +104,7 @@
                     </a>
                
                 </li>
-                <li class="nav-item  ">
+                <li class="nav-item">
                     <a ui-sref="admin.users" class="nav-link nav-toggle">
                         <i class="icon-users"></i>
                         <span class="title">Kullanicilar</span>
