--- a/Web/views/admin-partials/users.html
+++ b/Web/views/admin-partials/users.html
@@ -12,7 +12,7 @@
 
 </div>
 
-<button type="submit" class="btn green"><i class="fa fa-user-plus"></i>&nbsp; Kullanici Ekle</button>
+<button type="button" class="btn green" ng-click="open()"> <i class="fa fa-user-plus"></i>&nbsp; Kullanici Ekle</button>
 <hr />
 <div class="table-container">
 
