--- a/Web/views/admin-partials/locations.html
+++ b/Web/views/admin-partials/locations.html
@@ -55,7 +55,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a ng-click="DeleteLocation(location.Location_ID)">
+                                <a ng-click="DeleteLocation(location.ID)">
                                     <i class="fa fa-pencil"></i> Sil
                                 </a>
                             </li>
