--- a/Web/views/partials/locationFull.html
+++ b/Web/views/partials/locationFull.html
@@ -10,7 +10,7 @@
                     </div>
                 </div>
                 <div class="blog-single-img">
-                    <uib-carousel interval="myInterval">
+                    <uib-carousel interval="myInterval" style="margin:auto;height:305px; max-width:800px">
                         <uib-slide ng-repeat="slide in slides" active="slide.active">
                             <img ng-src="{{slide.image}}" style="margin:auto;height:305px; width:100%">
                             <div class="carousel-caption">
