--- a/Web/assets/layouts/layout3/css/custom.css
+++ b/Web/assets/layouts/layout3/css/custom.css
@@ -19,3 +19,13 @@ width: 100%;
         height: 150px;
        
 }
+
+.center-modal {
+    position: fixed;
+    top: 10%;
+    left: 18.5%;
+    z-index: 1050;
+    width: 80%;
+    height: 80%;
+    margin-left: -10%;
+}
