--- a/Web/views/admin-partials/AddNewUser.html
+++ b/Web/views/admin-partials/AddNewUser.html
@@ -1,14 +1,14 @@
 ﻿
 <div class="row">
-    <div class="col-md-6 col-xs-12 col-lg-4 col-md-offset-4 margin-top-40 ">
+    <div class="col-md-6 col-xs-12 col-lg-4 col-md-offset-4 margin-top-20 ">
         <form class="register-form" name="form" novalidate>
             <h3 class=" font-green">
-                Kullanici Ekle
+               Yeni Bir Kullanıcı Ekle
             </h3>
-            <p class="hint"> Enter your account details below: </p>
+            <p class="hint">  </p>
             <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Ad Soyad</label>
-                <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Name" name="username" ng-minlength="6"
+                <!--<label class="control-label visible-ie8 visible-ie9">Ad Soyad</label>-->
+                <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Ad Soyad" name="username" ng-minlength="6"
                        required ng-model="user.User_Name" />
 
                 <div ng-show="form.$submitted || form.username.$touched">
@@ -16,12 +16,10 @@
 
                     <p ng-show="form.username.$error.minlength" class="alert alert-danger">Ad-Soyad  Çok Kısa</p>
                 </div>
-
-
             </div>
             <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Email Adress</label>
-                <input class="form-control placeholder-no-fix" type="email" required autocomplete="off" id="register_email" placeholder="Email Adress" name="email" ng-model="user.User_Email" />
+                <!--<label class="control-label visible-ie8 visible-ie9">Email Adress</label>-->
+                <input class="form-control placeholder-no-fix" type="email" required autocomplete="off" id="register_email" placeholder="Email Adres" name="email" ng-model="user.User_Email" />
 
                 <div ng-show="form.$submitted || form.email.$touched">
                     <p ng-show="form.email.$error.required" class="alert alert-info">E-mail Alanını doldurunuz.</p>
@@ -29,26 +27,35 @@
                     <p ng-show="form.email.$error.email" class="alert alert-danger">Geçersiz Mail Adresi</p>
                 </div>
 
-
             </div>
 
             <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Password</label>
-                <input class="form-control placeholder-no-fix" required type="password" autocomplete="off" id="register_password" placeholder="Password" name="password" data-ng-model="user.User_Password" />
+                <!--<label class="control-label visible-ie8 visible-ie9">Password</label>-->
+                <input class="form-control placeholder-no-fix" required type="password" autocomplete="off" id="register_password" placeholder="Şifre" name="password" data-ng-model="user.User_Password" />
                 <div ng-show="form.$submitted || form.password.$touched">
                     <p ng-show="form.password.$error.required" class="alert alert-info">Şifre Alanını Doldurunuz</p>
 
                 </div>
             </div>
+
             <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Tekrar Şifre :</label>
-                <input class="form-control placeholder-no-fix" required type="password" autocomplete="off" placeholder="Re-type Your Password" name="rpassword" ng-model="test" />
+                <!--<label class="control-label visible-ie8 visible-ie9">Tekrar Şifre :</label>-->
+                <input class="form-control placeholder-no-fix" required type="password" autocomplete="off" placeholder="Tekrar Şifre" name="rpassword" ng-model="test" />
                 <p ng-show="test!=user.User_Password" class="alert alert-danger">Şifreler Biribiriyle uyuşmuyor</p>
 
             </div>
-        
+
+            <div class="form-group">
+
+                    <select class="form-control" name="select" ng-model="user.UserType_ID">
+                        <option value="">Kullanıcı Tipi...</option>
+                        <option ng-repeat="type in userTypes " value="{{type.UserType_ID}}">{{type.UserType_Name}}</option>
+                         
+                    </select>
+            </div>
+
             <div class="form-actions">
-                <button type="submit" ng-disabled="form.$invalid" id="register-submit-btn" class="btn btn-success uppercase pull-right" ng-click="addnewuser()">Ekle</button>
+                <button type="button" ng-disabled="form.$invalid" id="register-submit-btn" class="btn btn-success uppercase pull-right margin-bottom-20 " ng-click="addnewuser()">Ekle</button>
             </div>
         </form>
     </div>
