--- a/Web/views/admin-partials/locations.html
+++ b/Web/views/admin-partials/locations.html
@@ -3,7 +3,7 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="icon-home"></i>
-            <a ui-sref="admin.">Admin Panel</a>
+            <a ui-sref="admin">Admin Panel</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
@@ -13,7 +13,7 @@
 
 </div>
 
-<button type="submit" class="btn green"><i class="fa fa-plus"></i>&nbsp; Mekan Ekle</button>
+<a type="submit" class="btn green" ui-sref="admin.newLocation"><i class="fa fa-plus"></i>&nbsp; Mekan Ekle</a>
 <hr />
 <div class="table-container">
    
