--- a/Web/views/partials/locationFull.html
+++ b/Web/views/partials/locationFull.html
@@ -41,7 +41,7 @@
                   
                     <!--<h3 class="sbold blog-comments-title">Yorumlar({{location.UserComments.length}})</h3>-->
 
-               <div class="c-comment-list" style="height:310px;  overflow: auto;">
+               <div class="c-comment-list" style="max-height:310px;  overflow: auto;">
                         <div class="media" ng-repeat="comment in location.UserComments">
                             <div class="media-left">
                                 <a href="#">
