--- a/Web/views/partials/register.html
+++ b/Web/views/partials/register.html
@@ -42,8 +42,8 @@
              </div>
             <div class="form-group">
                 <label class="control-label visible-ie8 visible-ie9">Tekrar Şifre :</label>
-                <input class="form-control placeholder-no-fix" required type="password" autocomplete="off" placeholder="Re-type Your Password" name="rpassword" ng-model="test" />
-                <p ng-show="test!=user.User_Password" class="alert alert-danger">Şifreler Biribiriyle uyuşmuyor</p>
+                <input class="form-control placeholder-no-fix" required type="password" autocomplete="off" placeholder="Re-type Your Password" name="rpassword" ng-model="rpass" />
+                <p ng-show="rpass!=user.User_Password" class="alert alert-danger">Şifreler Biribiriyle uyuşmuyor</p>
 
              </div>
             <div class="form-group margin-top-20 margin-bottom-20">
